# routes/dMales.js
@@ -4,12 +4,12 @@ const express = require('express');
 const router = express.Router();
 
 const dMalesController = require('../takeTheWheel/dMales');
+const validation = require('../middleware/validate');
 
 
+router.post('/', validation.saveDmale, dMalesController.valhalla);
 
-router.post('/', dMalesController.valhalla);
-
-router.delete('/:id', dmalesController.removeValhalla);
+router.delete('/:id', dMalesController.removeValhalla);
 
 
 
